# fipi-parsing

./: .gitignore  README.md  dashboard.py  pyproject.toml
artifacts/: tasks.db
data/interim/: dbscan_acc.json  embeddings2d.npy  id_cluster.csv  kmeans_acc.json  top_words_kmeans.json
data/raw/: data.json  tasks.json
notebooks/: alexbuyan-eda.ipynb  alexbuyan-tags.ipynb  data-extraction.ipynb  v0.1-zeinovich-clustering.ipynb  v0.1-zeinovich-mistral_answers.ipynb  v0.2-alexbuyan-clustering.ipynb
src/: constants.py  extract.py  multi_choice_solver.py  task_extractor.py  transform.py  utils.py
src_dagster/: fipi_repository.py  operations.py  pipeline.py
src_dagster/src/: constants.py  main.py  transform.py
