[tool.poetry]
name = "ege-data-engineering"
version = "0.1.0"
description = "Data Engineering project for AES ITMO course"
authors = ["zeinovich", "alexbuyan", "alvikl"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
numpy = "^2.2.0"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
nltk = "^3.9.1"
plotly = "^5.24.1"
streamlit = "^1.41.1"


[tool.poetry.group.dev.dependencies]
torch = {url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.5.1%2Bcpu.cxx11.abi-cp312-cp312-linux_x86_64.whl"}
sentence-transformers = "^3.3.1"
scikit-learn = "^1.5.2"
notebook = "^7.3.1"
python-dotenv = "^1.0.1"
gigachat = "^0.1.36"
chromadb = "^0.5.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
